# spell-checker-speed-test

./: .gitignore  CMakeLists.txt  README.md
project/: spell_checker.cpp  spell_checker.h
test/: spell_checker_gTest.cpp
